--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Muneef's Personal Site</title>
 
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="https://github.com/muneefali/CV/blob/main/styles.css">
 
 <style>
 
