--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <p>Transport and Logistics Specialist</p>
         <p>for Load-out and Load-in of heavy equipment/modules</p>
         <p>PMP Certified with MBA Degree</p>
-        <p>I ❤ coffee and Explore new things</p>
+        <p>I ❤ coffee and Explore New Things</p>
       </td>
     </tr>
   </table>
