--- a/Contact-me.html
+++ b/Contact-me.html
@@ -40,7 +40,7 @@
         <p>Tirur, Malappuram, Kerala, India</p></td>
   </tr>
 </table>
-<form action="kmmuneefali@gmail.com" method="post">
+<form action="emailto: kmmuneefali@gmail.com" method="post">
 
 
 <table cellspacing="10px">
