--- a/Contact-me.html
+++ b/Contact-me.html
@@ -35,8 +35,7 @@
   </tr>
   <tr>
     <td>My Address:</td>
-    <td> <p>Kallumottakkal House, Kanmanam</p>
-          <p>Kanmanam Post, Thuvakkad</p>
+    <td> <p>Kallumottakkal House
         <p>Tirur, Malappuram, Kerala, India</p></td>
   </tr>
 </table>
