--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
   <table>
     <tr>
       <td><img src="Muneef.png" alt="Muneef's Profile Picture"></td>
-      <td>
+      <td><emp>
         <p>Transport and Logistics Specialist</p>
         <p>for Load-out and Load-in of heavy equipment/modules</p>
         <p>PMP Certified with MBA Degree</p>
-        <p>I ❤ coffee and Explore New Things</p>
+        <p>I ❤ coffee and Explore New Things</p></emp>
       </td>
     </tr>
   </table>
