--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
 <body>
-  <table>
+  <table cellspacing="20px">
     <tr>
       <td><img src="Muneef.png" alt="Muneef's Profile Picture"></td>
       <td><emp>
