--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <td><img src="Muneef.png" alt="Muneef's Profile Picture"></td>
       <td><emp>
         <p>Transport and Logistics Specialist</p>
-        <p>for Load-out and Load-in of heavy equipment/modules</p>
+        <p>Load-out and Load-in of Heavy Equipment/modules</p>
         <p>PMP Certified with MBA Degree</p>
         <p>I ❤ coffee and Explore New Things</p></emp>
       </td>
@@ -72,7 +72,7 @@
     </tr>
     <tr>
       <td>2020</td>
-      <td>PMP </td>
+      <td>PMP Certified</td>
     </tr>
     <tr>
       <td>2011-2015</td>
