--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     border-color: #53BF9D
   }
     img{
-    width: 150px
+    width: 140px
   }
   </style>
 
@@ -36,7 +36,7 @@
       <td><img src="Muneef.png" alt="Muneef's Profile Picture"></td>
       <td><emp>
         <p>Transport and Logistics Specialist</p>
-        <p>Load-out and Load-in of Heavy Equipment/modules</p>
+        <p>Load-out and Load-in of Heavy Equipment/Modules</p>
         <p>PMP Certified with MBA Degree</p>
         <p>I ❤ coffee and Explore New Things</p></emp>
       </td>
